<resources>
    <string name="app_name">ブックマーカー</string>

    <string name="title_activity_camera">CameraActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="view">表示</string>
    <string name="manual">手入力</string>
    <string name="scan">バーコードスキャン</string>
    <string name="input_code">バーコード入力</string>
    <string name="input_auto">一括登録</string>
    <string name="search">検索</string>

    <string name="id">ID</string>
    <string name="title">タイトル</string>
    <string name="author">著者</string>
    <string name="release_day">出版年</string>
    <string name="ISBN">ISBN</string>
    <string name="un_read">未読</string>
    <string name="read">既読</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="series">シリーズ名</string>
    <string name="save">保存</string>
    <string name="page">ページ数</string>
    <string name="publisher">出版社</string>
    <string name="genre">ジャンル</string>
    <string name="comment">コメント</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="back_space">CE</string>
</resources>
