<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.george.bookmarker.activity.barcode.CodeInputActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/isbnEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="13"
            android:inputType="number"
            android:focusableInTouchMode="false"
            android:focusable="false"/>

        <GridLayout
            android:paddingTop="20dp"
            android:paddingLeft="40dp"
            android:columnCount="3"
            android:rowCount="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sevenButton"
                android:layout_width="@dimen/isbn_button_width"
                android:layout_height="@dimen/isbn_button_height"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/seven"/>

            <Button
                android:id="@+id/eightButton"
                android:layout_width="@dimen/isbn_button_width"
                android:layout_height="@dimen/isbn_button_height"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nineButton"
                android:layout_width="@dimen/isbn_button_width"
                android:layout_height="@dimen/isbn_button_height"
                android:layout_row="0"
                android:layout_column="2"
                android:text="@string/nine"/>

            <Button
                android:id="@+id/fourButton"
                android:layout_width="@dimen/isbn_button_width"
                android:layout_height="@dimen/isbn_button_height"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/four"/>

            <Button
                android:id="@+id/fiveButton"
                android:layout_width="@dimen/isbn_button_width"
                android:layout_height="@dimen/isbn_button_height"
                android:layout_row="1"
                android:layout_column="1"
                android:text="@string/five"/>

            <Button
                android:id="@+id/sixButton"
                android:layout_width="@dimen/isbn_button_width"
                android:layout_height="@dimen/isbn_button_height"
                android:layout_row="1"
                android:layout_column="2"
                android:text="@string/six"/>

            <Button
                android:id="@+id/oneButton"
                android:layout_width="@dimen/isbn_button_width"
                android:layout_height="@dimen/isbn_button_height"
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/one"/>

            <Button
                android:id="@+id/twoButton"
                android:layout_width="@dimen/isbn_button_width"
                android:layout_height="@dimen/isbn_button_height"
                android:layout_row="2"
                android:layout_column="1"
                android:text="@string/two"/>

            <Button
                android:id="@+id/threeButton"
                android:layout_width="@dimen/isbn_button_width"
                android:layout_height="@dimen/isbn_button_height"
                android:layout_row="2"
                android:layout_column="2"
                android:text="@string/three"/>

            <Button
                android:id="@+id/zeroButton"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_width="180dp"
                android:layout_height="@dimen/isbn_button_height"
                android:text="@string/zero"/>

            <Button
                android:id="@+id/backSpaceButton"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_width="@dimen/isbn_button_width"
                android:layout_height="@dimen/isbn_button_height"
                android:text="@string/back_space"
                />

        </GridLayout>

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/isbnOkButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="0.5"
                android:text="OK"/>

            <Button
                android:id="@+id/isbnCancelButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="0.5"
                android:text="キャンセル"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
